plus umeng analytics into Android

--- a/apps/IELTSEye/platforms/android/res/values-zh-rCN/strings.xml
+++ b/apps/IELTSEye/platforms/android/res/values-zh-rCN/strings.xml
@@ -1,4 +1,4 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">雅思网蹲哥</string>
+    <string name="app_name">雅思口语网蹲哥</string>
 </resources>
